public/styles.css
html {
  box-sizing: border-box;
}
*, *:before, *:after {
  box-sizing: inherit;
}

html, body{
  height: 100%;
}
html {
  font-size: 16px;
  -webkit-text-size-adjust: 100%;
}
body {
  background-color: #000;
  font-size: 1rem;
  line-height: 1.5rem;
  font-weight: 400;
  font-style: normal;
  vertical-align: top;
  font-family: 'Exo 2', sans-serif;
  text-align: left;
  text-decoration: none;
  color: #ccc;
}
* {
  margin: 0;
  padding: 0;
  vertical-align: inherit;
  font-size: inherit;
  line-height: inherit;
  font-weight: inherit;
  font-style: inherit;
  font-family: inherit;
  text-align: inherit;
  text-decoration: inherit;
  color: inherit;
  background-color: transparent;
}

svg {
  display: block;
  width: 100%;
  height: 100%;
}

svg * {
  stroke-linejoin: round;
}

svg .bounding-rect {
  stroke-width: 0.015625;
  stroke: #fff;
}

svg .ship {
  stroke-width: 0.025rem;
  stroke: currentColor;
  fill: transparent;
}

svg .ship.playerShip {
  fill: currentColor;
}

svg .asteroid {
  stroke-width: 0.025rem;
  stroke: #fff;
  fill: transparent;
}

svg .hit {
  opacity: 0.5;
}

